--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>GPG fingerprint: 343648307462BF22F98FE7E0D40F2916435F</li>
           </ul>
         </li>
-        <li><img src="../assets/image_1711236861051_0.png" title="image.png" /></li>
+        <li><img src="https://github.com/kbrrrd/kbrd.github.io/blob/main/gnu-master.png" title="gnu-master.png" /></li>
       </ul>
     </li>
     <li></li>
