--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     <li>
       <h2>目前在做的事情</h2>
     </li>
-    <li>参与<a href="https:hackersanddesigners.nl/">H&amp;D(Hackers and Designers)</a>2023 Summer Campus，主题：重新编织集体基础设施</li>
+    <li>参与<a href="https://hackersanddesigners.nl/">H&amp;D(Hackers and Designers)</a>2023 Summer Campus，主题：重新编织集体基础设施</li>
     <li>基于Linux发行版Linux From Scratch(LFS)构建自己的发行版</li>
-    <li>自学<a href="https:lisp-lang.org/learn/">Common-Lisp</a> Programming，以及Lisp在人工智能领域的运用</li>
+    <li>自学<a href="https://lisp-lang.org/learn/">Common-Lisp</a> Programming，以及Lisp在人工智能领域的运用</li>
     <li></li>
     <li>
       <h2>正在关注的项目</h2>
@@ -92,14 +92,14 @@
           <h3>自我技术</h3>
         </li>
         <li>
-          <h3><a href="https:www.linuxfromscratch.org/">Linux From Scratch (LFS)</a></h3>
+          <h3><a href="https://www.linuxfromscratch.org/">Linux From Scratch (LFS)</a></h3>
         </li>
         <li>
           <h3>免费｜自托管</h3>
           <ul>
-            <li><a href="https:datura.network/">https://datura.network/</a></li>
-            <li><a href="https:kalli.st/services/">https://kalli.st/services/</a></li>
-            <li><a href="https:disroot.org/en">https://disroot.org/en</a></li>
+            <li><a href="https://datura.network/">https://datura.network/</a></li>
+            <li><a href="https://kalli.st/services/">https://kalli.st/services/</a></li>
+            <li><a href="https://disroot.org/en">https://disroot.org/en</a></li>
           </ul>
         </li>
         <li>
@@ -108,17 +108,17 @@
         <li>
           <h3>I2P</h3>
           <ul>
-            <li><a href="https:i2pd.website/">what is i2p</a></li>
-            <li><a href="https:geti2p.net/_static/pdf/i2p_philosophy.pdf">i2p的哲学</a></li>
-            <li><a href="https:geti2p.net/en/">https://geti2p.net/en/</a></li>
-            <li><a href="https:thricegreat.neocities.org/i_tried_i2p.txt">i2p is better than tor</a></li>
+            <li><a href="https://i2pd.website/">what is i2p</a></li>
+            <li><a href="https://geti2p.net/_static/pdf/i2p_philosophy.pdf">i2p的哲学</a></li>
+            <li><a href="https://geti2p.net/en/">https://geti2p.net/en/</a></li>
+            <li><a href="https://thricegreat.neocities.org/i_tried_i2p.txt">i2p is better than tor</a></li>
           </ul>
         </li>
         <li>
           <h3>密码学</h3>
           <ul>
-            <li><a href="https:cr.yp.to/">D. J. Bernstein blog</a></li>
-            <li><a href="https:www.emacswiki.org/emacs/CategoryCryptography">Emacs的密码学应用</a></li>
+            <li><a href="https://cr.yp.to/">D. J. Bernstein blog</a></li>
+            <li><a href="https://www.emacswiki.org/emacs/CategoryCryptography">Emacs的密码学应用</a></li>
           </ul>
         </li>
         <li><span class="task-status todo" style="margin-right:6px">TODO</span>寻找更自由（共享）的格式</li>
