--- a/introduction.html
+++ b/introduction.html
@@ -97,9 +97,9 @@
         <li>
           <h3>免费｜自托管</h3>
           <ul>
-            <li><a href="https://datura.network/">https://datura.network/</a></li>
-            <li><a href="https://kalli.st/services/">https://kalli.st/services/</a></li>
-            <li><a href="https://disroot.org/en">https://disroot.org/en</a></li>
+            <li><a href="https://datura.network/">datura</a></li>
+            <li><a href="https://kalli.st/services/">kalli</a></li>
+            <li><a href="https://disroot.org/en">disroot</a></li>
           </ul>
         </li>
         <li>
@@ -110,7 +110,7 @@
           <ul>
             <li><a href="https://i2pd.website/">what is i2p</a></li>
             <li><a href="https://geti2p.net/_static/pdf/i2p_philosophy.pdf">i2p的哲学</a></li>
-            <li><a href="https://geti2p.net/en/">https://geti2p.net/en/</a></li>
+            <li><a href="https://geti2p.net/en/">geti2p</a></li>
             <li><a href="https://thricegreat.neocities.org/i_tried_i2p.txt">i2p is better than tor</a></li>
           </ul>
         </li>
