--- a/introduction.html
+++ b/introduction.html
@@ -8,7 +8,7 @@
         <li>志愿：跨媒体艺术研究｜黄孙权教授</li>
         <li>初试成绩：总分 383｜专业基础 140｜专业理论 127｜思想政治 67｜英语 49</li>
         <li>其他成绩：歌德 Goethe-Zertifikat A2</li>
-        <li>使用语言：Command-Line｜Lisp</li>
+        <li>使用语言：Shell｜Lisp</li>
         <li>联系：
           <ul>
             <li>vg-bfs.net</li>
